switched from json to jackson